# Prefect-simple-task-scheduler

./: .gitignore  README.md  create_scheduled_task.bat  create_scheduled_task.sh  init.bat  init.sh  main.prefect.yaml  prefect.db-shm  prefect.db-wal  profiles.toml  pyproject.toml  start_prefect.bat  start_prefect.sh  start_prefect.vbs  update_flows.bat  update_flows.sh  update_prefect_path.py
src/prefect_perso/flows/: flow_example.py  inactive_browser.py
src/prefect_perso/flows/utils/: general.py  pydoll.py
